--- a/yes.css
+++ b/yes.css
@@ -1,6 +1,31 @@
+:root{
+    --base-color: white;
+    --base-variant: #e8e9ed;
+    --text-color: #111528;
+    --secondary-text: #232738;
+    --primary-color: #3a435d;
+    --accent-color: #0071ff;
+
+}
+
+.darkmode{
+    --base-color: rgb(0, 0, 0);
+    --base-variant: #242424;
+    --text-color: #ffffff;
+    --secondary-text: #bbbbbb;
+    --primary-color: #2a2d36;
+    --accent-color: #5ce600;
+
+}
+
+
+
+
 body {
     margin: 0;
     font-family: Arial, sans-serif;
+    background-color: var(--base-variant);
+    color: var(--text-color);
 }
 
 .container {
@@ -58,4 +83,39 @@ footer {
 .picture {
     height: 25em;
     margin-left:70%;
+}
+
+.picture2 {
+    height: 35px;
+    width: 35px;
+}
+
+.cta-button{
+    background-color: var(--accent-color);
+}
+#theme-switch{
+    height: 35px;
+    width: 35px;
+    padding: 0;
+    border-radius: 50%;
+    background-color: var(--base-variant);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+}
+#theme-switch svg{
+    fill: var(--primary-color)
+}
+#theme-switch svg:last-child{
+    display: none;
+}
+.darkmode #theme-switch svg:first-child{
+    display: none;
+}
+
+.darkmode #theme-switch svg:last-child{
+    display: block;
 }
